# ZeroStudio

./: .e935009_evaluation_report.md  LICENSE  README.md  settings.gradle.kts
.github/workflows/: build-apk-cli.yml  build-apk.yml  update-chatai.yml
.tooling/reapi/: README.md
core/app/: build.gradle.kts  proguard-rules.pro
core/app/src/main/: AndroidManifest.xml
core/chatai/: build.gradle.kts
core/chatai/ai/: build.gradle.kts
core/chatai/app/: build.gradle.kts
core/chatai/common/: build.gradle.kts
core/chatai/document/: build.gradle.kts
core/chatai/gradle/: libs.versions.toml
core/chatai/highlight/: build.gradle.kts
core/chatai/search/: build.gradle.kts
core/chatai/speech/: build.gradle.kts
core/chatai/tts/: build.gradle.kts
core/chatai/web/: build.gradle.kts
core/common/: build.gradle.kts
core/git/src/main/: AndroidManifest.xml
core/layout-editor/: build.gradle.kts
core/layout-editor/src/main/: AndroidManifest.xml
core/lsp-api/: build.gradle.kts
core/projects/: build.gradle.kts
core/resources/: build.gradle.kts
docs/: AGP_GRADLE_CODE_FIXES.md  AGP_GRADLE_UPGRADE_PLAN.md  AGP_GRADLE_V2_UPGRADE_PLAN.md  gradle-tooling-api-9.5.1-audit-realignment.md  gradle-tooling-api-9.5.1-deep-audit-matrix.md  gradle-tooling-api-9.5.1-integration-plan.md  gradle-tooling-api-9.5.1-upgrade-plan.md  iteration1-week1-closure-decision.md  iteration1-week1-status.md  iteration2-master-execution-plan.md  iteration2-reapi-proto-integration-status.md  iteration2-week1-execution-plan.md  iteration2-week2-integrated-transport-progress.md  mcp指令集定义范本(1).txt  tooling-951-capability-matrix.md  tooling-951-compatibility-test-plan.md  tooling-951-gap-register.md
docs/architecture/: lsp4j-rpc-decommission-aidl-grpc-reapi-plan.md  reapi-grpc-aidl-build-service-refactor.md
docs/performance/: editor_page_switch_trace_report.md
docs/superpowers/specs/: 2026-06-05-agp-9x-upgrade-design.md  2026-06-05-markdown-preview-fragment-design.md  2026-06-10-markdown-preview-rich-rendering-design.md  2026-06-11-git-fragments-2a1-puppygit-integration-design.md  2026-06-11-git-fragments-2a2-branch-fragment-design.md  2026-06-11-git-fragments-2c1-popup-username-fix-design.md  2026-06-11-git-fragments-2c2-quick-menu-design.md  2026-06-11-git-fragments-refactor-roadmap.md  2026-06-11-markdown-preview-compose-native-design.md
gradle/: libs.versions (1).toml  libs.versions.toml
lsp/clangd/: build.gradle.kts
modules/colorpicker/: build.gradle
modules/image-preview/: CMakeLists.txt
modules/image-preview/src/main/cpp/: thorvg-jni.cpp
modules/zero-Symbol-input-view/: build.gradle.kts
modules/zero-mcp-server/: build.gradle.kts
scripts/chatai/: reapply-integrations.sh  sync_from_rikkahub.py
termux/application/: build.gradle.kts
testing/gradleToolingTest/: build.gradle.kts
tooling/.tooling/reapi/: README.md  sync-remote-apis.sh
tooling/api/: build.gradle.kts
tooling/build-grpc/: README.md  build.gradle.kts
tooling/builder-model-impl/: build.gradle.kts
tooling/gradle-build-grpc-protocol/: build.gradle.kts
tooling/impl/: build.gradle.kts
tooling/impl/scripts/: README-week1-smoke-checks.md  check_initialize_negotiation_summary.sh  check_non_android_init_summary.sh  check_progress_closure_summary.sh  run_week1_tooling_smoke_checks.sh
tooling/model/: build.gradle.kts
tooling/reapi/: README.md
tooling/reapi-proto/: build.gradle.kts
utilities/FileTree/: build.gradle.kts
utilities/templates-impl/scripts/: audit_androidstudio_templates.py
utilities/templates-impl/tools/: verify_templates_api_usage.sh
xml/lsp/: build.gradle.kts
(+1777 files in other folders)
